--- a/anime.html
+++ b/anime.html
@@ -10,7 +10,7 @@
 <u><h1>My top 3 Anime</h1></u>
  <ol>
    <h2><li>Naruto</li></h2>
-   <img src="./Assignment_4/Hobby-Images/naruto.jpg" alt="Naruto poster" width="155" height="260">
+   <img src="./Hobby-Images/naruto.jpg" alt="Naruto poster" width="155" height="260">
    <p>Naruto is a Japanese manga series written and illustrated by Masashi Kishimoto.</p>
    <p>It tells the story of Naruto Uzumaki, a young ninja who seeks recognition from his peers and dreams of becoming the Hokage, the leader of his village.</p>
    <p>The story is told in two parts; the first set in Naruto's pre-teen years (Shonin Jump), and the second in his teens (Shipudden).</p>
@@ -20,7 +20,7 @@
    <br/>
    <br/>
    <h2><li>Black Clover</li></h2>
-   <img src="./Assignment_4/Hobby-Images/black-clover.jpg" alt="Black Clover poster" width="155" height="260">
+   <img src="./Hobby-Images/black-clover.jpg" alt="Black Clover poster" width="155" height="260">
    <p>Black Clover is a Japanese manga series written and illustrated by Yūki Tabata.</p>
    <p>The story follows Asta, a young boy born without any magic power in a world where your value and status is determined by you magic ability.</p>
    <p>The series focuses on Asta, a young orphan who is left to be raised in an orphanage alongside his fellow orphan, Yuno.</p>
@@ -31,7 +31,7 @@
    <br/>
    <br/>
    <h2><li>Sword Art Online</li></h2>
-   <img src="./Assignment_4/Hobby-Images/sword-art-online.jpg" alt="Sword Art Online poster" width="155" height="260">
+   <img src="./Hobby-Images/sword-art-online.jpg" alt="Sword Art Online poster" width="155" height="260">
    <p>Sword Art Online is a Japanese light novel series written by Reki Kawahara and illustrated by abec.</p>
    <p> The series takes place in the near future and focuses on protagonists Kazuto "Kirito" Kirigaya and Asuna Yuuki as they play through various virtual reality MMORPG worlds.</p>
    <p>In 2022, a virtual reality massively multiplayer online role-playing game (VRMMORPG) called Sword Art Online (SAO) will be released.</p>
