--- a/Hobbies.html
+++ b/Hobbies.html
@@ -30,6 +30,6 @@
   </ol>
   <br/>
   <br/>
-  <button><a href="./Index.html">Homepage</a></button>
+  <button><a href="./index.html">Homepage</a></button>
 </body>
 </html>
