--- a/Movies.html
+++ b/Movies.html
@@ -46,6 +46,6 @@
 </dl>
 <br/>
 <br/>
-<button><a href="./Index.html">Homepage</a></button>
+<button><a href="./index.html">Homepage</a></button>
 </body>
 </html>
