--- a/Authors.html
+++ b/Authors.html
@@ -31,6 +31,6 @@
  <br/>
  <br/>
  <br/>
-<button><a href="./Index.html">Homepage</a></button>
+<button><a href="./index.html">Homepage</a></button>
 </body>
 </html>
